# fastapi-sqlalchemy-starter

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  setup_dev.sh
alembic/: env.py
app/: app.py
app/config/: config.py  env.py  permissions.py  server.py
app/config/database/: db.py  optimized_pool.py
app/core/admin/models/: staff.py
app/core/admin/routes/: performance_routes.py  platform_staff.py
app/core/admin/services/: platform_staff.py
app/core/admin/types/: admin.py
app/core/auth/decorators/: __init__.py  permission_decorators.py
app/core/roles/: models.py
app/middleware/: performance_middleware.py  rate_limiting_middleware.py
app/utils/: distributed_lock.py  my_jwt.py  uuid_generator.py
app/utils/cache/: __init__.py  cache.dump  cache_invalidation.py  cache_serializer.py  enhanced_cache.py  optimised_cache.py  populate_cache.py  redis_cache.py
app/utils/crud/: dump.py  migration_helper.py  optimization_config.py  optimized_queries.py  optimized_service_crud.py  performance_monitor.py  queries.py  query.dump  selective_loading.py  service_crud.py  super_optimised_query.py  super_optimised_service.py  types_crud.py  usage_examples.py
app/utils/database/: connection_pool.py  optimized_db.py  query_analyzer.py
app/utils/logger/: log.py
app/utils/mail/: __init__.py  mailer.py  templates.py
app/utils/monitoring/: performance_monitor.py
app/utils/response/: optimized_response.py
app/versions/: route_handler.py  types_routes.py  v1.py
templates/verification/: rest_password.html  verify_email.html
(+30 files in other folders)
