[project]
name = "fastapi-sqlalchemy-starter"
version = "0.1.0"
description = "Clean FastAPI + async SQLAlchemy starter with auth, users, and RBAC scaffolding"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "cloudinary>=1.44.1",
    "cryptography>=46.0.1",
    "fastapi-mail>=1.5.0",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.0",
    "jinja2>=3.1.0",
    "orjson>=3.10.18",
    "passlib[bcrypt]>=1.7.4",
    "psutil>=7.1.0",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.9.1",
    "pyjwt>=2.10.1",
    "redis[hiredis]>=6.4.0",
    "sqlalchemy[asyncio]>=2.0.0",
]

[tool.ruff]
fix = true
show-fixes = true
